# RefineDet

./: .gitignore
data/VOC0712/: create_data.sh  create_list.py
examples/refinedet/: MobileNetV2_VOC2012_320x320.py
python/caffe/: model_libs.py
scripts/: create_annoset.py
src/caffe/layers/: cudnn_conv_layer.cpp
src/caffe/proto/: caffe.proto
test/cpp/: CMakeLists.txt  CaffePredict.cpp  CaffePredict.h  main.cpp  spdhelper.hpp
